# Logic-Lords

./: .gitignore  AI_INTEGRATION.md  IMPLEMENTATION_SEQUENCE.md  Makefile  PROJECT_PLAN.md  README.md
apps/notification-service/: README.md  pyproject.toml
apps/notification-service/src/: main.py
apps/notification-service/src/notification_service/: __init__.py  config.py  engine.py  events.py  main.py  observability.py  routes.py  schemas.py  store.py  templates.py
apps/notification-service/tests/: test_notification_service.py
blockchain/: foundry.toml
contracts/: README.md
docs/: TECHNICAL_SOFTWARE_IMPLEMENTATION_SUMMARY.md  ai-integration-alignment.md  ai-pipeline-runbook.md  architecture.md  data-model.md  evidence-upload-verification-runbook.md  firebase-telemetry-runbook.md  ledger-wallet-integration-runbook.md  module-boundaries.md  module-implementation-blueprints.md  nfrs.md  risk-model.md  safety-escalation-runbook.md
services/blockchain-verification-service/: README.md  pyproject.toml
services/blockchain-verification-service/src/: main.py
services/blockchain-verification-service/src/blockchain_verification/: __init__.py  config.py  engine.py  events.py  main.py  observability.py  routes.py  schemas.py  sepolia_rpc.py  store.py
services/blockchain-verification-service/tests/: test_blockchain_verification_service.py
services/report-generation-service/: README.md  pyproject.toml
services/report-generation-service/src/: main.py
services/report-generation-service/src/report_generation/: __init__.py  config.py  engine.py  events.py  main.py  observability.py  routes.py  schemas.py  storage_adapter.py  store.py
services/report-generation-service/tests/: test_report_generation_service.py
(+215 files in other folders)
