[project]
name = "blockchain-verification-service"
version = "0.1.0"
description = "InfraGuard blockchain verification service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0"
]
live = [
  "eth-account>=0.13.0,<1.0.0",
  "eth-abi>=5.1.0,<6.0.0",
  "eth-utils>=2.3.0,<3.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
